{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 43,
  "lineage": "11440240-1191-3671-b4b4-256246214eb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d3f444bc76de0a79",
            "arn": "arn:aws:ec2:ap-south-1:381492215977:instance/i-035273f83a00df609",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035273f83a00df609",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-065387f1308bffb70",
            "private_dns": "ip-172-31-12-68.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.68",
            "public_dns": "ec2-13-126-191-81.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.191.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0faca97e67e243bea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04cc1ca5327fe9d20",
            "tags": {
              "Name": "exercise_0100",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "exercise_0100",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0866b9948e9b16328"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381492215977:security-group/sg-0f19b654a7b6f31b0",
            "description": "security group 2 using Terraform",
            "egress": [],
            "id": "sg-0f19b654a7b6f31b0",
            "ingress": [],
            "name": "security group 2 using Terraform",
            "name_prefix": "",
            "owner_id": "381492215977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_http",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "sec_http",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed8e887aced9a3a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381492215977:security-group/sg-0b0cf4723db2ade0e",
            "description": "security group 1 using Terraform",
            "egress": [],
            "id": "sg-0b0cf4723db2ade0e",
            "ingress": [],
            "name": "security group 1 using Terraform",
            "name_prefix": "",
            "owner_id": "381492215977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_ssh",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "sec_ssh",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed8e887aced9a3a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sec_http_e1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "outbound for TCP 1",
            "from_port": 0,
            "id": "sgrule-3122916577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f19b654a7b6f31b0",
            "security_group_rule_id": "sgr-0ee0ce11d8ff880a5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sec_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sec_http_i1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": "inbound for TCP 1",
            "from_port": 8443,
            "id": "sgrule-3213234977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f19b654a7b6f31b0",
            "security_group_rule_id": "sgr-0fb9a7d9e8f34bff4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sec_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sec_http_i2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": "inbound for TCP 2",
            "from_port": 443,
            "id": "sgrule-844942604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f19b654a7b6f31b0",
            "security_group_rule_id": "sgr-003d51914825e2b19",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sec_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sec_ssh_i1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "TLC from VPC",
            "from_port": 22,
            "id": "sgrule-220359772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b0cf4723db2ade0e",
            "security_group_rule_id": "sgr-08b9b250c04df7b96",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sec_ssh"
          ]
        }
      ]
    }
  ]
}